--- a/bs-binary-admin/add_hostel.html
+++ b/bs-binary-admin/add_hostel.html
@@ -123,7 +123,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                                             <label>Адрес Хостела:</label>
                                             <input class="form-control" placeholder="Введите имя гостя" name="hAddress" />
                                         </div>
-                                        <button type="submit" class="btn btn-default">Добавить гостя</button>
+                                        <button type="submit" class="btn btn-default">Добавить хостел</button>
                                     </form>
                                 <br />
                                 </div>
